Fix anchor links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
   		{%- assign sorted_post = site.posts | sort: 'title' -%}
   		{%- for post in sorted_post -%}
     			<li class="board">
-    				<a href="index.html#{{ post.title | downcase }}">{{ post.title }}</a>
+    				<a href="index.html#{{ post.title | downcase | replace:'é','e' | replace:' ','_' | replace:',','-' }}">{{ post.title }}</a>
     			</li>
   		{%- endfor -%}
     </ul>
