Add link to github profile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,8 @@
   		{%- endfor -%}
     </ul>
 
-		>> A question? <b>Send an email</b>
+  	<p><small>Hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a><br />
+  >> A question? <a href="https://github.com/Simonbdy" target="_blank">Send an email</a>
 
         {% if site.show_downloads %}
         <ul class="downloads">
