To be done: post layout for all entries

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,15 @@
 ---
 layout: default
 ---
+<h2>{{ page.title | capitalize }}</h2>
 
-<h2 markdown="1"><a href="{{ "index.html" | absolute_url }}">Luos documentation</a> >> {{ page.categories[0] | capitalize }} >> {{ page.title | capitalize }}</h2>
+[&#91; Go back to full list &#93;](/index) [&#91;Go to category page&#93;](/categories)  Browse by letters: [&#91;French&#93;](/alphabet) [English]
+
 <small>Last update: {{ page.date | date: "%-d %B %Y" }}</small>
 <br /><br />
-<hr />
 
 <!--<p class="view">by {{ page.author | default: site.author }}</p>-->
 
 {{content}}
 
-<br />
-<hr class="endpost" />
-<br />
-<small><a href="https://www.luos-robotics.com"><< Back to luos-robotics.com</a></small>
+
