--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h2>{{ page.title | replace: "_", " "| capitalize }}</h2>
+<h2><span class="FR">{{ page.name_fr | replace: "_", " "| capitalize }}</span> | <span class="EN">{{ page.name_en | replace: "_", " "| capitalize }}</span></h2>
 
 <a href="/index">&#91;Full list&#93;</a> <a href="/categories">&#91;Category page&#93;</a> Browse by letters: <a href="/alphabet_fr">&#91;French&#93;</a><a href="/alphabet_en">&#91;English&#93;</a>
 
