--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -242,3 +242,11 @@ div.anchor {
 .readmore {
 	font-size: 10px;
 }
+
+.fiche{
+	width: 60%;
+	background-color:#ffffdd;
+	padding: 10px;
+	box-shadow: -2px 2px 5px #dedede;
+	margin-bottom: 20px;
+}
